--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link type="text/css" rel="stylesheet" href="game.css">
 	</head>
 	<body>
+		Find a match!
 		<div id="game" class="memory"></div>
 		<script type="text/javascript" src="jquery.js"></script>
 		<script type="text/javascript" src="game.js"></script>
